--- a/docs/locales/en.json
+++ b/docs/locales/en.json
@@ -26,13 +26,19 @@
       "type": "number",
       "options": {
         "style": "currency",
-        "currency": "USD" } } },
+        "currency": "USD" } },
+    "relativeTimeFormat": {
+      "type": "relativeTime",
+      "unit": "day",
+      "options": {
+        "style": "short" } } },
 
   "About": "About",
-  "Label": "Label",
+  "Label days": "Label days",
   "key_string": "This is a key string",
   "item_count": "${count} ${itemPlural(count)}",
   "place_ordinal": "${place} ${placeOrdinal(place)}",
   "time_from_now": "${time} ${minutesCardinal(minutes)} from now",
   "date_key": "${dateFormat(date)}",
-  "currency_key": "${currencyFormat(currency)}" }
+  "currency_key": "${currencyFormat(currency)}",
+  "relativeTime_key": "${relativeTimeFormat(days)}" }
