--- a/docs/locales/en.json
+++ b/docs/locales/en.json
@@ -1,4 +1,4 @@
-{ "types": {
+{ "formatters": {
     "itemPlural": {
       "type": "cardinal",
       "zero": "items",
@@ -32,13 +32,15 @@
       "unit": "day",
       "options": {
         "style": "short" } } },
-
-  "About": "About",
-  "Label days": "Label days",
-  "key_string": "This is a key string",
-  "item_count": "${count} ${itemPlural(count)}",
-  "place_ordinal": "${place} ${placeOrdinal(place)}",
-  "time_from_now": "${time} ${minutesCardinal(minutes)} from now",
-  "date_key": "${dateFormat(date)}",
-  "currency_key": "${currencyFormat(currency)}",
-  "relativeTime_key": "${relativeTimeFormat(days)}" }
+  "messages": {
+    "About": "About",
+    "Label days": "Label days",
+    "key_string": "This is a key string",
+    "time_from_now": "$1 $minutesCardinal($1) from now",
+    "date_key": "$dateFormat($1)",
+    "item_count": "$1 $itemPlural($1)",
+    "place_ordinal": "$1 $placeOrdinal($1)",
+    "currency_key": "$currencyFormat($1)",
+    "relativeTime_key": "$relativeTimeFormat($1)"
+  }
+}
